--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
     VERIFY OTP
 </button>
         
-        <div id="timerContainer" class="text-center text-[10px] font-bold text-slate-600 uppercase tracking-widest">
+        <!-- <div id="timerContainer" class="text-center text-[10px] font-bold text-slate-600 uppercase tracking-widest">
             Resend code in <span id="timerText" class="text-blue-500">30</span>s
-        </div>
+        </div> -->
     </div>
 </form>
 
