Increase OTP input maxlength from 5 to 6

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p class="text-sm font-bold text-blue-400 uppercase tracking-widest">Verify Email</p>
             <p class="text-[10px] text-slate-500">A 5-digit code was sent to your email.</p>
         </div>
-        <input type="text" id="otpInput" maxlength="5" placeholder="0 0 0 0 0" class="w-full bg-white/5 border-2 border-blue-500/30 p-4 rounded-xl text-center text-2xl font-black tracking-[0.5em] outline-none focus:border-blue-500 transition text-white">
+        <input type="text" id="otpInput" maxlength="6" placeholder="0 0 0 0 0 0" class="w-full bg-white/5 border-2 border-blue-500/30 p-4 rounded-xl text-center text-2xl font-black tracking-[0.5em] outline-none focus:border-blue-500 transition text-white">
         
         <button type="button" onclick="verifyAndRegister(event)" class="w-full bg-green-600 py-4 rounded-xl font-bold">
     VERIFY OTP
